switched carousel, improved flexibility of carousel (height stretching is to be fixed

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -120,9 +120,8 @@
 
 .carousel-cell {
     width: 100%; /* full width */
-    height: 200px; /* height of carousel */
-    margin-right: 10px;
-    max-width: 320px;
+    max-height: 300px;
+    height: 100%;
 }
 
 .flickity-page-dots {
@@ -131,5 +130,18 @@
 
 .b-carousel__img {
     width: 100%;
-    height: 100%;
+}
+
+.glider-prev,
+.glider-next {
+    top: 50% !important;
+    color: white!important;
+}
+
+.glider-prev {
+    left: 5px!important;
+}
+
+.glider-next {
+    right: 5px !important;
 }
